<resources>
    <string name="app_name">Nihal Home</string>
    <string name="choose_language_title">Choose Language</string>
    <string name="language_english">English</string>
    <string name="language_hindi">हिंदी</string>
    <string name="action_next">Next</string>
    <string name="action_next_hi">आगे</string>
    <string name="action_previous">Previous</string>
    <string name="action_previous_hi">पीछे</string>
    <string name="action_share_app">Share App</string>
    <string name="action_share_app_hi">ऐप शेयर करें</string>
    <string name="device_admin_title">Activate Device Admin</string>
    <string name="device_admin_title_hi">डिवाइस एडमिन सक्रिय करें</string>
    <string name="device_admin_explanation">Activate device admin to let Nihal Home protect your device.</string>
    <string name="action_activate">Activate</string>
    <string name="choose_default_launcher_title">Choose Default Launcher</string>
    <string name="choose_default_launcher_title_hi">डिफ़ॉल्ट लॉन्चर चुनिए</string>
    <string name="action_continue">Continue</string>
    <string name="action_continue_hi">चुनिए</string>
    <string name="action_close">Close</string>
    <string name="choose_favourite_launcher_title">Choose Your Favourite Launcher</string>
    <string name="choose_favourite_launcher_title_hi">अपना पसंदीदा लॉन्चर चुनें</string>
    <string name="dont_ask_me_again">Don\'t Ask me Again</string>
    <string name="dont_ask_me_again_hi">मुझसे यह दोबारा न पूछें</string>
    <string name="action_submit">Submit</string>
    <string name="scan_title">Scanning apps that can control your screen</string>
    <string name="scan_title_hi">ऐसे ऐप्स जो आपकी स्क्रीन कंट्रोल कर सकती हैं</string>
    <string name="scan_subtitle_running">Scanning installed apps…</string>
    <string name="scan_subtitle_running_hi">इंस्टॉल की गई ऐप्स को स्कैन किया जा रहा है</string>
    <string name="scan_subtitle_done">All apps scanned</string>
    <string name="scan_subtitle_done_hi">सभी ऐप्स स्कैन हो चुकी हैं</string>
    <string name="no_issues_found_title">Today, You\'re Safe</string>
    <string name="no_issues_found_title_hi">आज आप सुरक्षित हैं।</string>
    <string name="no_issues_found_subtitle">No Apps Found that can control your screen</string>
    <string name="no_issues_found_subtitle_hi">ऐसी कोई ऐप नहीं मिली जो आपकी स्क्रीन कंट्रोल कर सके</string>

    <string name="feature_uninstall_title">Uninstall Apps</string>
    <string name="feature_uninstall_title_hi">ऐप्स अनइंस्टॉल करें</string>
    <string name="feature_uninstall_subtitle">Remove Unwanted apps</string>
    <string name="feature_uninstall_subtitle_hi">फालतू ऐप्स को हटाएं</string>
    <string name="feature_otp_sms_title">OTP / SMS</string>
    <string name="feature_otp_sms_subtitle">Apps that can read or send your SMS/OTP</string>
    <string name="feature_otp_sms_subtitle_hi">जो ऐप्स आपके SMS या OTP को पढ़ या भेज सकती हैं</string>
    <string name="otp_sms_scan_subtitle_running">Scanning apps for SMS/OTP access…</string>
    <string name="otp_sms_scan_subtitle_running_hi">SMS/OTP एक्सेस ऐप्स को स्कैन किया जा रहा है...</string>
    <string name="otp_sms_scan_subtitle_done">%1$d apps found with SMS/OTP access</string>
    <string name="otp_sms_scan_subtitle_done_hi">SMS/OTP एक्सेस के साथ %1$d ऐप्स मिली हैं</string>
    <string name="otp_sms_no_issues_title_hi">आज आप सुरक्षित हैं</string>
    <string name="otp_sms_no_issues_subtitle">No apps found with SMS/OTP access</string>
    <string name="otp_sms_no_issues_subtitle_hi">SMS/OTP एक्सेस वाली कोई ऐप नहीं मिली</string>
    <string name="action_app_info">App Info</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="uninstall_scan_subtitle_running">Scanning installed apps…</string>
    <string name="uninstall_scan_subtitle_running_hi">इंस्टॉल की गई ऐप्स को स्कैन किया जा रहा है</string>
    <string name="uninstall_scan_subtitle_done">%1$d apps found on your phone</string>
    <string name="uninstall_scan_subtitle_done_hi">आपके फोन पर %1$d ऐप्स मिली हैं</string>
    <string name="uninstall_no_apps_subtitle">No removable apps found</string>
    <string name="uninstall_no_apps_subtitle_hi">हटाने लायक कोई ऐप नहीं मिली</string>
    <string name="feature_social_hacking_title">Social Hacking</string>
    <string name="feature_social_hacking_title_hi">सोशल हैकिंग</string>
    <string name="feature_social_hacking_subtitle">e.g. Whatsapp</string>
    <string name="feature_social_hacking_subtitle_hi">जैसे कि WhatsApp</string>
    <string name="feature_see_more_title">See More</string>
    <string name="feature_see_more_title_hi">और देखें</string>
    <string name="feature_see_more_subtitle">Discover more for safety</string>
    <string name="feature_see_more_subtitle_hi">सुरक्षा के लिए और देखें</string>
    <string name="see_more_coming_soon">Coming Soon</string>
    <string name="ask_an_expert_label">How to Use</string>
    <string name="ask_an_expert_label_hi">इस्तेमाल करना सीखें</string>

    <string name="action_close_hi">बंद करें</string>
    <string name="action_locked">Locked</string>
    <string name="action_locked_hi">बंद नहीं कर सकते</string>
    <string name="action_watch_ad">Watch ad</string>
    <string name="action_loading_ad">Loading...</string>
    <string name="action_retry_ad">Retry</string>
    <string name="action_skip">No Thanks</string>

    <string name="premium_label">Premium</string>
    <string name="premium_label_hi">प्रीमियम</string>
    <string name="premium_step_watch_title">Watch one ad</string>
    <string name="premium_step_watch_title_hi">एक ऐड देखें</string>
    <string name="premium_step_watch_sub">about 30 seconds</string>
    <string name="premium_step_watch_sub_hi">लगभग 30 सेकंड</string>
    <string name="premium_step_unlock_title">24 hours unlocked</string>
    <string name="premium_step_unlock_title_hi">24 घंटे अनलॉक</string>
    <string name="premium_step_unlock_sub">all protection on</string>
    <string name="premium_step_unlock_sub_hi">पूरी सुरक्षा चालू</string>
    <string name="premium_step_repeat_title">Repeat tomorrow</string>
    <string name="premium_step_repeat_title_hi">कल फिर दोहराएं</string>
    <string name="premium_step_repeat_sub">one ad a day</string>
    <string name="premium_step_repeat_sub_hi">रोज़ एक ऐड</string>

    <string name="update_button">Update</string>
    <string name="update_button_hi">अपडेट करें</string>
    <string name="update_downloading">Downloading… %1$d%%</string>
    <string name="update_downloading_hi">डाउनलोड हो रहा है… %1$d%%</string>
    <string name="update_downloading_plain">Downloading…</string>
    <string name="update_downloading_plain_hi">डाउनलोड हो रहा है…</string>
    <string name="update_failed">Download failed. Check your internet and tap Update again.</string>
    <string name="update_failed_hi">डाउनलोड नहीं हो सका। इंटरनेट जांचें और फिर से अपडेट दबाएं।</string>
</resources>
